Fixed tab spacing, CSS styling, minor changes
- removed tailwind requires in webpack.mix.js
- removed the script tag from the research page
- deleted home.blade.php and welcome.blade.php files
- added body tags to php files that didn't have them

--- a/resources/css/research.css
+++ b/resources/css/research.css
@@ -1,33 +1,33 @@
 .page:after {
     content: "";
-	display: table;
-	clear: both;
-  }
+    display: table;
+    clear: both;
+}
 
-  .left {
+.left {
     float: left;
-  	width: 50%;
-  }
+    width: 50%;
+}
 
-  .right {
+.right {
     float: right;
-  	width: 50%;
-  }
+    width: 50%;
+}
 
-  #game {
-  	text-align: center;
-  	align-items: center;
-  }
+#game {
+    text-align: center;
+    align-items: center;
+}
 
-  #settingsArea {
+#settingsArea {
     margin: 10px;
-  }
+}
 
-  .montySelection {
+.montySelection {
     margin: 10px;
-  }
+}
 
-  .montySelection select {
+.montySelection select {
     /*background-color: #0563af;*/
     background-color: #1180f1;
     color: white;
@@ -40,9 +40,9 @@
     appearance: button;
     outline: none;
     border-radius: 5px;
-  }
+}
 
-  .montySelection::before {
+.montySelection::before {
     content: "\f13a";
     font-family: Open Sans;
     position: absolute;
@@ -56,22 +56,22 @@
     color: rgba(255, 255, 255, 0.5);
     background-color: rgba(255, 255, 255, 0.1);
     pointer-events: none;
-  }
+}
 
-  .montySelection:hover::before {
+.montySelection:hover::before {
     color: rgba(255, 255, 255, 0.6);
     background-color: rgba(255, 255, 255, 0.2);
-  }
+}
 
-  .montySelection select option {
+.montySelection select option {
     padding: 30px;
-  }
+}
 
-  .box {
+.box {
     margin: 10px;
-  }
+}
 
-  .box input {
+.box input {
     background-color: white;
     /*border-color: #0563af;*/
     border-color: #1180f1;
@@ -82,9 +82,9 @@
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
     outline: none;
     border-radius: 5px;
-  }
+}
 
-  .box button {
+.box button {
     /*background-color: #0563af;*/
     background-color: #1180f1;
     border: none;
@@ -95,13 +95,13 @@
     box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
     outline: none;
     border-radius: 10px;
-  }
+}
 
-  #dataArea {
+#dataArea {
     margin: 10px;
-  }
+}
 
-  .main_container {
+.main_container {
     height: 46px;
     width: auto;
     padding: 3px;
@@ -111,8 +111,9 @@
     background-color: #1180f1;
     align-content: center;
     border-radius: 5px;
-  }
-  .container_inner {
+}
+
+.container_inner {
     height: auto;
     border: none;
     /*background-color: #0563af;*/
@@ -123,9 +124,10 @@
     padding-left: 10px;
     align-content: center;
     border-radius: 5px;
-  }
-  .num_tiles {
-    width:30px;
+}
+
+.num_tiles {
+    width: 30px;
     height: 30px;
     background-color: #888888;
     color: #ffffff;
@@ -137,16 +139,16 @@
     font-family: verdana;
     vertical-align: center;
     border-radius: 5px;
-  }
-  
-  #error {
-  	color: red;
-    text-align:center;
+}
+
+#error {
+    color: red;
+    text-align: center;
     text-decoration: bold;
     font-family: Open Sans;
-  }
-  
-  .progBar { 
+}
+
+.progBar {
     height: 20px;
     position: relative;
     background: #555;
@@ -154,9 +156,9 @@
     padding: 10px;
     margin: 20px 0px;
     box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
-  }
-  
-  .progBar > span {
+}
+
+.progBar>span {
     display: block;
     height: 100%;
     border-top-right-radius: 8px;
@@ -164,35 +166,34 @@
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     background-color: blue;
-    background-image: linear-gradient(
-      center bottom,
-      rgb(43,194,83) 37%,
-      rgb(84,240,84) 69%
-    );
-    box-shadow: 
-      inset 0 2px 9px  rgba(255,255,255,0.3),
-      inset 0 -2px 6px rgba(0,0,0,0.4);
+    background-image: linear-gradient( center bottom, rgb(43, 194, 83) 37%, rgb(84, 240, 84) 69%);
+    box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3), inset 0 -2px 6px rgba(0, 0, 0, 0.4);
     position: relative;
     overflow: hidden;
-  }
-  
-  #wlNums {
-  	border: solid;
+}
+
+#wlNums {
+    border: solid;
     border-color: grey;
     border-radius: 5px;
     padding: 20px;
     width: 200 px;
-  }
-  #wlNums span{
-  	margin: 10px;
-  }
+}
 
-  .door {
-  	 border:0;
-  	 width:100%;
-  }
+#wlNums span {
+    margin: 10px;
+}
 
-  .doorButton {
-  	 border:0;
-  	 width:30%;
-  }
+.door {
+    border: 0;
+    width: 100%;
+}
+
+.doorButton {
+    border: 0;
+    width: 30%;
+}
+
+.center {
+    text-align: center;
+}
